fix overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,7 +19,6 @@ $comboDarkGrey: #5b7290;
 //General definitions
 html {
   font-family: $font;
-  overflow:hidden; 
 }
 
 body {
